tests/invalid/nested_missing_const.c
int main() {
    return !~;
}
// ERROR: Line 2, Error 2009